[package]
name = "zatlin-rs"
version = "0.2.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8"
zatlin-internal = { path = "../zatlin-internal" }
zatlin-macro = { path = "../zatlin-macro", optional = true }
getrandom = { version = "0.2", optional = true }

[features]
default = [ ]
use_macro = [ "zatlin-macro" ]
wasm = [ "getrandom/js" ]