[package]
name = "zatlin"
version = "0.4.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8"
zatlin-macro = { path = "../zatlin-macro", optional = true }
getrandom = { version = "0.2", optional = true }
regex = "1.7"

[features]
default = [ ]
use_macro = [ "zatlin-macro" ]
wasm = [ "getrandom/js" ]